--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,36 @@
 	"version": "1.0.0",
 	"description": "An excercise to practice graphql",
 	"main": "index.js",
+	"config": {
+		"s3BucketName": "agus-dev-chat-app-backend-deployment",
+		"region": "us-east-1",
+		"cloudFormationStackName": "ServerlessExpressChatApp",
+		"functionName": "",
+		"domain": ""
+	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"startDev": "nodemon ./index.js"
+		"start": "node app.local.js",
+		"local": "node scripts/local",
+		"invoke-lambda": "cross-var aws lambda invoke --function-name $npm_package_config_functionName --region $npm_package_config_region --payload file://api-gateway-event.json lambda-invoke-response.json && cat lambda-invoke-response.json",
+		"create-bucket": "cross-var aws s3 mb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
+		"delete-bucket": "cross-var aws s3 rb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
+		"package": "cross-var aws cloudformation package --template ./sam-template.yaml --s3-bucket $npm_package_config_s3BucketName --output-template sam-template.packaged.yaml --region $npm_package_config_region",
+		"deploy": "cross-var aws cloudformation deploy --template-file sam-template.packaged.yaml --stack-name $npm_package_config_cloudFormationStackName --capabilities CAPABILITY_IAM --region $npm_package_config_region --parameter-overrides DomainName=$npm_package_config_domain",
+		"package-deploy": "npm run build && npm run package && npm run deploy",
+		"delete-stack": "cross-var aws cloudformation delete-stack --stack-name $npm_package_config_cloudFormationStackName --region $npm_package_config_region",
+		"setup": "npm install && (cross-var aws s3api get-bucket-location --bucket $npm_package_config_s3BucketName --region $npm_package_config_region || npm run create-bucket) && npm run package-deploy",
+		"build": "webpack-cli"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"nodemon": "^2.0.20"
+		"cross-var": "^1.1.0",
+		"nodemon": "^2.0.20",
+		"webpack": "^5.75.0",
+		"webpack-cli": "^5.0.1"
 	},
 	"dependencies": {
+		"@vendia/serverless-express": "^4.10.1",
 		"cors": "^2.8.5",
 		"dayjs": "^1.11.7",
 		"dotenv": "^16.0.3",
