allow run local backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
 		"domain": ""
 	},
 	"scripts": {
-		"start": "node app.local.js",
-		"local": "node scripts/local",
+		"start": "nodemon app.local.js",
+		"local": "nodemon scripts/local",
 		"invoke-lambda": "cross-var aws lambda invoke --function-name $npm_package_config_functionName --region $npm_package_config_region --payload file://api-gateway-event.json lambda-invoke-response.json && cat lambda-invoke-response.json",
 		"create-bucket": "cross-var aws s3 mb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
 		"delete-bucket": "cross-var aws s3 rb s3://$npm_package_config_s3BucketName --region $npm_package_config_region",
